# zaldinar

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build-binary  build-plugins  default-config.json  test-runtime
irclib/: Cargo.toml
irclib/src/: lib.rs
plugin-generator/: Cargo.toml
plugin-generator/src/: main.rs
plugin-generator/templates/: cargo.toml
plugin-generator/templates/plugins-crate/: cargo.toml  lib.rs
plugins/: brainfuck.rs  choose.rs  control.rs  eightball.rs  foods.rs  info.rs  template.rs
plugins/resources/eightball/: responses.txt
plugins/resources/foods/: cakes.json  cakes.rs  cakes.wikitext  initial-cake-download.sh
src/: client.rs  config.rs  dispatch.rs  errors.rs  events.rs  execv_linux.rs  filewatch.rs  interface.rs  irc.rs  lib.rs  main.rs  startup.rs
src/client/: mod.rs
src/config/: mod.rs
src/errors/: mod.rs
src/interface/: mod.rs
src/irc/: mod.rs
src/plugins/: choose.rs  control.rs  ctcp.rs  eightball.rs  help.rs  log.rs  mod.rs  template.rs  tracker.rs
zaldinar-core/: Cargo.toml
zaldinar-core/src/: client.rs  config.rs  errors.rs  events.rs  interface.rs  lib.rs
zaldinar-irclib/: Cargo.toml
zaldinar-irclib/src/: lib.rs
zaldinar-runtime/: Cargo.toml
zaldinar-runtime/src/: dispatch.rs  execv_linux.rs  filewatch.rs  lib.rs  main.rs  startup.rs
zaldinar-runtime/src/plugins/: control.rs  ctcp.rs  help.rs  log.rs  mod.rs  tracker.rs
zaldinar-runtime/tests/: lib.rs
