[package]

name = "zaldinar"
version = "0.1.1-dev"
authors = ["Dabo Ross <daboross@daboross.net>"]

[dependencies]
regex = "0.1.4"
regex_macros = "0.1.2"
rand = "0.1.2"
rustc-serialize = "0.2.4"
fern = "0.1.2"
fern_macros = "0.1.0"
chrono = "0.1.10"
getopts = "0.1.0"
#inotify = "0.1.0"

[dependencies.inotify]
git = "https://github.com/daboross/inotify-rs.git"
