[package]

name = "zaldinar"
version = "0.1.1-dev"
authors = ["Dabo Ross <daboross@daboross.net>"]

[dependencies]
regex = "0.1"
rustc-serialize = "0.3"
time = "0.1"
getopts = "0.2"
log = "0.3"
fern = "0.3"
throw = "0.1"

[dependencies.libc]
version = "0.2"
optional = true

[dependencies.inotify]
version = "0.2"
optional = true

[dependencies.zaldinar-irclib]
path = "../zaldinar-irclib"

[dependencies.zaldinar-core]
path = "../zaldinar-core"

[dependencies.generated-plugins-crate]
path = "../build-out/cumulative-crate"

[features]
default = ["binary-filewatch"]

binary-filewatch = ["libc", "inotify"]

[profile.release]
lto = true
