[package]
name = "zaldinar"
version = "0.1.1-dev"
authors = ["David Ross <daboross@daboross.net>"]

[dependencies]
regex = "0.2"
rustc-serialize = "0.3"
chrono = "0.3"
getopts = "0.2"
log = "0.3"
fern = "0.4"
throw = "0.1"
inotify = { version = "0.4", optional = true }
libc = { version = "0.2", optional = true }

[dependencies.zaldinar-irclib]
path = "../zaldinar-irclib"

[dependencies.zaldinar-core]
path = "../zaldinar-core"

[dependencies.generated-plugins-crate]
path = "../build-out/cumulative-crate"

[features]
binary-filewatch = ["inotify", "libc"]
default = ["binary-filewatch"]

[profile.release]
lto = true
