[package]
name = "zaldinar"
version = "0.1.1-dev"
authors = ["David Ross <daboross@daboross.net>"]

[dependencies]
throw = "0.1"
lazy_static = "0.2"
regex = "0.2"
chrono = "0.3"
getopts = "0.2"
log = "0.3"
fern = "0.4"
inotify = { version = "0.4", optional = true }
libc = { version = "0.2", optional = true }

[dependencies.zaldinar-irclib]
path = "../zaldinar-irclib"

[dependencies.zaldinar-core]
path = "../zaldinar-core"

[dependencies.generated-plugins-crate]
path = "../build-out/cumulative-crate"

[features]
binary-filewatch = ["inotify", "libc"]
default = ["binary-filewatch"]

[profile.release]
lto = true
